--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   equatable: ^2.0.3
   ml_linalg:
   timer_count_down:
+  google_ml_vision:
+  opencv:
 
 dev_dependencies:
   flutter_test:
